# Data_manipulation

./: .gitignore  215.ipynb  README.md  pyproject.toml
data_manipulation/: __init__.py  transpose.py
rokas_data_manipulation/: __init__.py  convolution.py  transpose.py  window.py
tests/: test_convolution.py  test_transpose.py  test_window.py
