[tool.poetry]
name = "data_manipulation"
version = "0.1.0"
description = "A package for common data manipulation operations in Python"
authors = ["Rokas Galdikas <rokas.galdikas@yahoo.com>"]
readme = "README.md"
repository = "https://github.com/TuringCollegeSubmissions/rgaldi-DE2v2.1.5/tree/main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
