[tool.poetry]
name = "rokas-data-manipulation"
version = "0.1.4"
description = "A package for common data manipulation operations in Python"
authors = ["Rokas Galdikas <rokas.galdikas@yahoo.com>"]
readme = "README.md"
packages = [
    { include = "rokas_data_manipulation" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

